--- a/payment-service/src/main/resources/application-development.yml
+++ b/payment-service/src/main/resources/application-development.yml
@@ -1,8 +1,28 @@
 spring:
-  activemq:
-    broker-url: failover:(tcp://localhost:61616)
-      username: sum
-      password: sum
-      initial-redelivery-delay: 60000
-      redelivery-delay: 30000
-      maximum-redeliveries: -1
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  cloud:
+    discovery:
+      enabled: false
+
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+eureka:
+  client:
+    enabled: false
+    register-with-eureka: false
+
+management:
+  endpoints:
+    jmx:
+      domain: ${spring.application.name}
+
+management.security.enabled: false
+
+security:
+  basic:
+    enable: false
+  ignored: /**
