--- a/event-ticket/src/main/resources/db/changelog/1.0/db.changelog-1.0.yaml
+++ b/event-ticket/src/main/resources/db/changelog/1.0/db.changelog-1.0.yaml
@@ -40,6 +40,9 @@ databaseChangeLog:
                 CREATE TABLE event
                 (
                 id INTEGER NOT NULL,
+                name varchar(20),
+                location varchar(20),
+                address varchar(20),
                 date_created timestamp,
                 date_modified timestamp,
                 start_date timestamp not null,
@@ -51,6 +54,9 @@ databaseChangeLog:
                 );
 
                 comment on column payment_transaction.id is 'Jedinstveni id zahteva';
+                comment on column payment_transaction.name is 'Naziv dogadjaja';
+                comment on column payment_transaction.location is 'Adresa lokacije';
+                comment on column payment_transaction.location is 'Lokacija dogadjaja';
                 comment on column payment_transaction.date_created is 'Datum incijalnog snimanja zahteva';
                 comment on column payment_transaction.date_modified is 'Datum poslednje izmene';
                 comment on column payment_transaction.start_date is 'Datum održavanja dogadjaja';
