--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -5,15 +5,32 @@ spring:
   activemq:
     pool:
       enabled: true
+  main:
+    allow-bean-definition-overriding: true
+  datasource:
+    url: jdbc:oracle:thin:@localhost:1521/XEPDB1
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    username: paymentservice
+    password: paymentservice!
       
-management.security.enabled: false
+management:
+  security:
+    enabled: false
 
 mybatis: 
   config-location: classpath:mybatis/mybatis-config.xml
 
-spring.main.allow-bean-definition-overriding: true
 
-logging.level.com.*.client: DEBUG
+
+  liquibase:
+    enabled: true
+
+
+logging:
+  level:
+    com:
+      .*:
+        client: DEBUG
 
 logbook:
   exclude:
@@ -36,23 +53,12 @@ logbook:
     max-body-size: 4096 
 
 ---
-spring:
-  profiles: test
+#spring:
+#  profiles: test
   
 #  activemq:
 #    broker-url: vm://localhost?broker.persistent=false&broker.schedulerSupport=true&broker.deleteAllMessagesOnStartup=true
-  
-  datasource:
-    platform: h2
-    url: jdbc:h2:mem:testdb;
-    username: sa
-    password: 
-    driver-class-name: org.h2.Driver
-    
-    hikari:
-      jdbcUrl: jdbc:h2:mem:testdb;
-      username: sa
-      password:
+
 
   liquibase:
     enabled: true
@@ -91,10 +97,3 @@ spring:
 #    
 
 
----
-spring:
-  profiles: sdeploy
-  activemq:
-    broker-url: failover:(tcp://192.168.179.20:2108,tcp://192.168.179.25:2108)
-    password: cs!
-    user: cs
