sredjeni kontroleri i upiti, testirana rezervacija, pravljenje eventa, login, register (bez neke normalne autentikacije), placanje i otkazivanje karata

--- a/event-ticket/src/main/resources/application-development.yml
+++ b/event-ticket/src/main/resources/application-development.yml
@@ -12,6 +12,8 @@ spring:
     driver-class-name: oracle.jdbc.driver.OracleDriver
     username: eventticket
     password: eventticket!
+  liquibase:
+    enabled: true
 
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
@@ -24,8 +26,10 @@ management:
   endpoints:
     jmx:
       domain: ${spring.application.name}
+    security:
+      enabled: false
 
-management.security.enabled: false
+#management.security.enabled: false
 
 security:
   basic:
