--- a/event-ticket/src/main/resources/db/changelog/1.0/db.changelog-1.0.yaml
+++ b/event-ticket/src/main/resources/db/changelog/1.0/db.changelog-1.0.yaml
@@ -24,9 +24,9 @@ databaseChangeLog:
                 username varchar(20) not null,
                 password varchar(200) not null,
                 identity_number varchar(20) not null,
-                first_name varchar(20) not null,
-                last_name varchar(20),
-                address varchar(20),
+                first_name varchar(50) not null,
+                last_name varchar(50),
+                address varchar(100),
                 registration_date timestamp not null,
                 email varchar(40),
                 status varchar(20) not null,
@@ -40,9 +40,9 @@ databaseChangeLog:
                 CREATE TABLE event
                 (
                 id INTEGER NOT NULL,
-                name varchar(20),
-                location varchar(20),
-                address varchar(20),
+                name varchar(50),
+                location varchar(100),
+                address varchar(100),
                 date_created timestamp,
                 date_modified timestamp,
                 start_date timestamp not null,
@@ -75,7 +75,7 @@ databaseChangeLog:
                      customer_id number,
                      event_id number,
                      status varchar(20) not null,
-                     transaction_details varchar(20) not null,
+                     transaction_details varchar(20),
 
                      CONSTRAINT PK_TICKET PRIMARY KEY (id),
                      constraint fk_customer_id FOREIGN key(customer_id) references customer(id),
