--- a/event-ticket/pom.xml
+++ b/event-ticket/pom.xml
@@ -38,10 +38,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
@@ -174,6 +174,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>docker-event-ticket</finalName>
 	</build>
 
 </project>
